# LexBot-controller

./: .env  Cargo.toml  docker-compose.yml
.sqlx/: query-1a01001588cc68eafbb4a49ee97a7450c9bb0ef157834fbedcaa7fc1142265d8.json  query-2a2560bfec61cdd6d62fa71d940deafbff0ac2c8c14b4e3db62cb580bb475326.json  query-ba680c3c2725620a51848592631cf257c1baf03e088f50d94aedced2a2a43682.json  query-e21b40f0eaf6233c66006e54284819e950cc876618a7cfec2158b2d258555719.json  query-e25fe23f4ef4d8cfa791a640deffffc9e010dc3e219c068411cf68d2193eb9c0.json
migrations/: 20250522162114_init.down.sql  20250522162114_init.up.sql  20250525075819_user_table.up.sql  20250527090126_token_table.up.sql
src/: main.rs
src/config/: mod.rs
src/handlers/: auth.rs  mod.rs
src/handlers/bots/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/handlers/system/: mod.rs
src/handlers/users/: create.rs  delete.rs  read.rs  update.rs
src/middleware/: auth.rs  mod.rs
src/routers/: auth.rs  bots.rs  mod.rs  users.rs
src/state/: bots.rs  mod.rs
src/utils/: database.rs  mod.rs
src/utils/models/: auth_tokens.rs  bots.rs  mod.rs  users.rs
src/utils/models/schemas/: bots.rs  mod.rs  tokens.rs  users.rs
