[package]
name = "bot_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
bot_processing = { path = '../bot_processing'}
bot_instance ={ path = '../bot_instance' }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = "0.8.4"
