[package]
name = "bot_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
bot_processing = { path = '../bot_processing'}
bot_instance ={ path = '../bot_instance' }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
axum = "0.8.4"
tower-http = { version = "0.6.4", features = ["cors"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
